--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "preview": "react-scripts start",
     "eject": "react-scripts eject"
   },
-  
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "react-scripts": "latest"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
